--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página de Teste</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -82,7 +82,7 @@
     </section>
 
     <footer>
-        <p>Feito para fins educativos. Projeto de estudos sobre biologia celular - 2025 </p>
+        <p>Feito para fins educativos. Projeto de estudos sobre biologia celular (2025) </p>
     </footer>
 
 </body>
