--- a/html/cinesina.html
+++ b/html/cinesina.html
@@ -13,6 +13,35 @@
 
     <div class="container">
         <header>
+            <nav class="navbar navbar-expand-lg navbar-custom">
+                <div class="container">
+    
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Alternar navegação">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+    
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav ms-auto">
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="../index.html">Início</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="../html/citoplasma.html">citoplasma</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="../html/citoesqueleto.html">citoesqueleto</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="../html/ciclose.html">ciclose</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="../html/equipe.html">equipe</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
             <h1>Cinesina: Proteína Motor</h1>
         </header>
 
@@ -44,7 +73,7 @@
         </section>
 
         <footer>
-            <p>&copy; 2025 - Cinesina e Transporte Celular</p>
+            <p>Feito para fins educativos. Projeto sobre biologia celular (2025) </p>
         </footer>
     </div>
 
