--- a/html/citoplasma.html
+++ b/html/citoplasma.html
@@ -4,45 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/citoplasma.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/citoplasma.css">
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-custom">
-            <div class="container">
+      <nav class="navbar navbar-expand-lg navbar-custom">
+        <div class="container">
 
-              <button
-                class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarNav"
-                aria-controls="navbarNav"
-                aria-expanded="false"
-                aria-label="Alternar navegação"
-              >
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Alternar navegação">
                 <span class="navbar-toggler-icon"></span>
-              </button>
-        
-              <div class="collapse navbar-collapse" id="navbarNav">
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                  <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="index.html">Início</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Sobre</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Serviços</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./equipe.html">Equipe</a>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="../index.html">Início</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../html/citoesqueleto.html">citoesqueleto</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../html/ciclose.html">ciclose</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../html/cinesina.html">cinesina</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="../html/equipe.html">equipe</a>
                   </li>
                 </ul>
-              </div>
             </div>
-          </nav>
+        </div>
+    </nav>
         <h1>O Citoplasma</h1>
     </header>
     
