--- a/html/equipe.html
+++ b/html/equipe.html
@@ -28,13 +28,16 @@
                             <a class="nav-link" aria-current="page" href="../index.html">Início</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Sobre</a>
+                            <a class="nav-link" href="../html/citoplasma.html">citoplasma</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Serviços</a>
+                            <a class="nav-link" href="../html/citoesqueleto.html">citoesqueleto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./html/equipe.html">Equipe</a>
+                            <a class="nav-link" href="../html/ciclose.html">ciclose</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../html/cinesina.html">cinesina</a>
                         </li>
                     </ul>
                 </div>
