--- a/html/citoesqueleto.html
+++ b/html/citoesqueleto.html
@@ -14,54 +14,57 @@
 <body>
 
     <header>
-      <nav class="navbar navbar-expand-lg navbar-custom">
-        <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-custom">
+            <div class="container">
 
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Alternar navegação">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Alternar navegação">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="../index.html">Início</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../html/citoplasma.html">citoplasma</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../html/ciclose.html">ciclose</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../html/cinesina.html">cinesina</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="../html/equipe.html">equipe</a>
-                  </li>
-                </ul>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="../index.html">Início</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../html/citoplasma.html">citoplasma</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../html/ciclose.html">ciclose</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../html/cinesina.html">cinesina</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../html/equipe.html">equipe</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
         <h1>Citoesqueleto</h1>
     </header>
 
     <div class="container">
-        <div class="content">
-            <section>
+            <section class="section">
                 <h2>O que é o Citoesqueleto?</h2>
                 <p>O citoesqueleto é uma rede de fibras que se estende por toda a célula, proporcionando estrutura e
                     suporte. Ele é composto por três tipos principais de filamentos: microtúbulos, filamentos
                     intermediários e microfilamentos. Essas estruturas ajudam a manter a forma celular, além de
                     desempenharem um papel crucial em processos como o movimento celular, divisão celular e transporte
                     intracelular.</p>
+
+                <section class="imagem-com-legenda">
+                    <img src="../imagem/citoesqueleto.webp"
+                        alt="Uma célula humana em cultura, vista ao microscópio óptico. Os microtúbulos que aparecem em verde são formados por proteínas, responsáveis pela forma da célula e pelo movimento interno de organelas, em especial durante a divisão celular. O núcleo aparece em azul e mede cerca de 41 μm em seu maior diâmetro">
+                    <p>Uma célula humana em cultura, vista ao microscópio óptico. Os microtúbulos que aparecem em verde
+                        são formados por proteínas, responsáveis pela forma da célula e pelo movimento interno de
+                        organelas, em especial durante a divisão celular. O núcleo aparece em azul e mede cerca de 41 μm
+                        em seu maior diâmetro</p>
+                </section>
             </section>
-            <section class="imagem-com-legenda">
-                <img src="../imagem/citoesqueleto.webp"
-                    alt="Uma célula humana em cultura, vista ao microscópio óptico. Os microtúbulos que aparecem em verde são formados por proteínas, responsáveis pela forma da célula e pelo movimento interno de organelas, em especial durante a divisão celular. O núcleo aparece em azul e mede cerca de 41 μm em seu maior diâmetro">
-                    <p>Uma célula humana em cultura, vista ao microscópio óptico. Os microtúbulos que aparecem em verde são formados por proteínas, responsáveis pela forma da célula e pelo movimento interno de organelas, em especial durante a divisão celular. O núcleo aparece em azul e mede cerca de 41 μm em seu maior diâmetro</p>
-            </section>
-            <section>
+            <section class="section">
                 <h2>Funções do Citoesqueleto</h2>
                 <ul>
                     <li><strong>Manutenção da forma celular:</strong> O citoesqueleto ajuda a célula a manter sua forma,
@@ -76,7 +79,7 @@
                         adjacentes, como as junções de adesão e desmossomos.</li>
                 </ul>
             </section>
-            <section>
+            <section class="section">
                 <h2>Componentes do Citoesqueleto</h2>
                 <p>O citoesqueleto é formado por três tipos de filamentos, cada um com funções distintas:</p>
                 <ul>
@@ -91,14 +94,13 @@
                         contração muscular em células musculares.</li>
                 </ul>
             </section>
-            <section>
+            <section class="section">
                 <h2>Importância do Citoesqueleto na Célula</h2>
                 <p>O citoesqueleto é crucial para o funcionamento adequado das células. Ele não só fornece a estrutura
                     física necessária para manter a célula estável, mas também permite que a célula responda a estímulos
                     externos e se movimente de maneira eficiente. Sem o citoesqueleto, as células não seriam capazes de
                     realizar funções vitais como a divisão celular ou o transporte de substâncias dentro da célula.</p>
             </section>
-        </div>
     </div>
 
     <footer>
