--- a/html/ciclose.html
+++ b/html/ciclose.html
@@ -1,77 +1,98 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ciclose - Movimento do Citoplasma</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/ciclose.css">
 </head>
-<body>
-        <header>
-            <nav class="navbar navbar-expand-lg navbar-custom">
-                <div class="container">
-    
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Alternar navegação">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-    
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav ms-auto">
-                            <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="../index.html">Início</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="../html/citoplasma.html">citoplasma</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="../html/citoesqueleto.html">citoesqueleto</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="../html/cinesina.html">cinesina</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="../html/equipe.html">equipe</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-            <h1>Ciclose</h1>
-        </header>
 
-        <div class="container">
-            <section class="section">
-                <h2>O que é o Ciclose?</h2>
-                <p>O ciclose é o movimento contínuo do citoplasma dentro das células, essencial para o transporte de organelas, nutrientes e outras substâncias essenciais para a célula. Este processo facilita a distribuição uniforme dos componentes dentro da célula e é especialmente importante em células vegetais e animais.</p>
-            </section>
-            <section class="section">
-                <h2>Como Funciona o Ciclose?</h2>
-                <p>O ciclose ocorre devido à ação das fibras do citoesqueleto, que são responsáveis pela movimentação do citoplasma. Esse movimento é cíclico e ocorre de forma contínua, permitindo que o citoplasma se desloque de uma região para outra dentro da célula.</p>
-                <p>Este processo é crucial para a distribuição de nutrientes e para a movimentação das organelas, como os mitocôndrios, que precisam se mover para as áreas da célula onde mais energia é requerida. O ciclose também facilita a troca de gases e a eliminação de resíduos metabólicos da célula.</p>
-            </section>
-            <section class="section">
-                <h2>Importância do Ciclose</h2>
-                <ul>
-                    <li><strong>Distribuição eficiente de nutrientes:</strong> Ajuda na movimentação de nutrientes e organelas para as áreas da célula que necessitam deles.</li>
-                    <li><strong>Auxílio na divisão celular:</strong> Durante a mitose e a meiose, o ciclose contribui para o rearranjo das organelas e a separação dos cromossomos.</li>
-                    <li><strong>Facilita a homeostase celular:</strong> O movimento contínuo do citoplasma auxilia na eliminação de resíduos celulares e na distribuição de proteínas.</li>
-                    <li><strong>Auxílio no crescimento celular:</strong> Facilita o transporte de substâncias importantes para o crescimento da célula e a síntese de novos componentes celulares.</li>
-                </ul>
-            </section>
-            <section class="section">
-                <h2>Exemplo de Ciclose em Células Vegetais</h2>
-                <p>Em células vegetais, o ciclose é observado quando o citoplasma se move em torno da célula, geralmente visível em células que contêm grandes vacúolos. Esse movimento é essencial para a circulação de nutrientes e ajuda a manter a estrutura da célula vegetal.</p>
+<body>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-custom">
+            <div class="container">
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Alternar navegação">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="../index.html">Início</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../html/citoplasma.html">citoplasma</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../html/citoesqueleto.html">citoesqueleto</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../html/cinesina.html">cinesina</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../html/equipe.html">equipe</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <h1>Ciclose</h1>
+    </header>
+
+    <div class="container">
+        <section class="section">
+            <h2>O que é o Ciclose?</h2>
+            <p>O ciclose é o movimento contínuo do citoplasma dentro das células, essencial para o transporte de
+                organelas, nutrientes e outras substâncias essenciais para a célula. Este processo facilita a
+                distribuição uniforme dos componentes dentro da célula e é especialmente importante em células vegetais
+                e animais.</p>
+        </section>
+        <section class="section">
+            <h2>Como Funciona o Ciclose?</h2>
+            <p>O ciclose ocorre devido à ação das fibras do citoesqueleto, que são responsáveis pela movimentação do
+                citoplasma. Esse movimento é cíclico e ocorre de forma contínua, permitindo que o citoplasma se desloque
+                de uma região para outra dentro da célula.</p>
+            <p>Este processo é crucial para a distribuição de nutrientes e para a movimentação das organelas, como os
+                mitocôndrios, que precisam se mover para as áreas da célula onde mais energia é requerida. O ciclose
+                também facilita a troca de gases e a eliminação de resíduos metabólicos da célula.</p>
+        </section>
+        <section class="section">
+            <h2>Importância do Ciclose</h2>
+            <ul>
+                <li><strong>Distribuição eficiente de nutrientes:</strong> Ajuda na movimentação de nutrientes e
+                    organelas para as áreas da célula que necessitam deles.</li>
+                <li><strong>Auxílio na divisão celular:</strong> Durante a mitose e a meiose, o ciclose contribui para o
+                    rearranjo das organelas e a separação dos cromossomos.</li>
+                <li><strong>Facilita a homeostase celular:</strong> O movimento contínuo do citoplasma auxilia na
+                    eliminação de resíduos celulares e na distribuição de proteínas.</li>
+                <li><strong>Auxílio no crescimento celular:</strong> Facilita o transporte de substâncias importantes
+                    para o crescimento da célula e a síntese de novos componentes celulares.</li>
+            </ul>
+        </section>
+        <section class="section">
+            <h2>Exemplo de Ciclose em Células Vegetais</h2>
+            <p>Em células vegetais, o ciclose é observado quando o citoplasma se move em torno da célula, geralmente
+                visível em células que contêm grandes vacúolos. Esse movimento é essencial para a circulação de
+                nutrientes e ajuda a manter a estrutura da célula vegetal.</p>
+            <div class="imagem-com-legenda">
                 <img src="../imagem/ciclose.png" alt="Representação do ciclose em células vegetais">
-            </section>
-            <footer>
-                <p>Feito para fins educativos. Projeto sobre biologia celular (2025) </p>
-            </footer>
-        </div>
+                <p>Representação de uma célula vegetal mostrando o fenômeno da ciclose, que é o movimento contínuo do
+                    citoplasma dentro da célula. Esse fluxo ajuda na distribuição de substâncias e no transporte de
+                    organelas, como os cloroplastos, garantindo o bom funcionamento celular.</p>
+            </div>
+        </section>
+        <footer>
+            <p>Feito para fins educativos. Projeto sobre biologia celular (2025) </p>
+        </footer>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
