--- a/html/cinesina.html
+++ b/html/cinesina.html
@@ -1,75 +1,94 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>cinesina</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/cinesina.css">
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/pagina.css">
 </head>
+
 <body>
 
-    <div class="container">
-        <header>
-            <nav class="navbar navbar-expand-lg navbar-custom">
-                <div class="container">
-    
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Alternar navegação">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-    
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav ms-auto">
-                            <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="../index.html">Início</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="../html/citoplasma.html">citoplasma</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="../html/citoesqueleto.html">citoesqueleto</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="../html/ciclose.html">ciclose</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="../html/equipe.html">equipe</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-            <h1>Cinesina: Proteína Motor</h1>
-        </header>
 
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-custom">
+            <div class="container">
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Alternar navegação">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="../index.html">Início</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../html/citoplasma.html">citoplasma</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../html/citoesqueleto.html">citoesqueleto</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../html/ciclose.html">ciclose</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../html/equipe.html">equipe</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <h1>cinesina</h1>
+    </header>
+    <div class="container">
         <section class="section">
             <h2>O que é a Cinesina?</h2>
-            <p>A cinesina é uma proteína motor que se desloca ao longo dos microtúbulos do citoesqueleto. Ela utiliza energia proveniente da hidrólise de ATP para mover-se, realizando transporte intracelular de vesículas, organelas e outras estruturas essenciais. A cinesina é fundamental em vários processos celulares, como a divisão celular, o transporte de sinais e a movimentação de materiais dentro da célula.</p>
+            <p>A cinesina é uma proteína motor que se desloca ao longo dos microtúbulos do citoesqueleto. Ela utiliza
+                energia proveniente da hidrólise de ATP para mover-se, realizando transporte intracelular de vesículas,
+                organelas e outras estruturas essenciais. A cinesina é fundamental em vários processos celulares, como a
+                divisão celular, o transporte de sinais e a movimentação de materiais dentro da célula.</p>
         </section>
 
         <section class="section">
             <h2>Como Funciona a Cinesina?</h2>
-            <p>A cinesina "anda" ao longo dos microtúbulos utilizando uma estrutura chamada "domínios motoras". Esses domínios se ligam ao microtúbulo e realizam um movimento de "passos", utilizando a energia fornecida pelo ATP. Cada "passo" desloca a cinesina ao longo do microtúbulo, transportando as cargas que ela carrega.</p>
-            <p>Durante o transporte, a cinesina pode se mover na direção positiva (para a periferia da célula) ou na direção negativa (para o centro da célula), dependendo do tipo específico de cinesina.</p>
+            <p>A cinesina "anda" ao longo dos microtúbulos utilizando uma estrutura chamada "domínios motoras". Esses
+                domínios se ligam ao microtúbulo e realizam um movimento de "passos", utilizando a energia fornecida
+                pelo ATP. Cada "passo" desloca a cinesina ao longo do microtúbulo, transportando as cargas que ela
+                carrega.</p>
+            <p>Durante o transporte, a cinesina pode se mover na direção positiva (para a periferia da célula) ou na
+                direção negativa (para o centro da célula), dependendo do tipo específico de cinesina.</p>
         </section>
 
         <section class="section">
             <h2>Funções da Cinesina</h2>
             <ul>
-                <li><strong>Transporte de vesículas:</strong> A cinesina é responsável por transportar vesículas contendo proteínas, lipídios e outras substâncias para diferentes regiões da célula.</li>
-                <li><strong>Divisão celular:</strong> Durante a mitose, a cinesina ajuda no alinhamento dos cromossomos e na movimentação das células-filhas.</li>
-                <li><strong>Movimentação de organelas:</strong> A cinesina é responsável pela movimentação de organelas, como mitocôndrias, no interior das células.</li>
-                <li><strong>Transporte de sinais e moléculas:</strong> Ela também participa no transporte de sinais celulares essenciais para a função da célula.</li>
+                <li><strong>Transporte de vesículas:</strong> A cinesina é responsável por transportar vesículas
+                    contendo proteínas, lipídios e outras substâncias para diferentes regiões da célula.</li>
+                <li><strong>Divisão celular:</strong> Durante a mitose, a cinesina ajuda no alinhamento dos cromossomos
+                    e na movimentação das células-filhas.</li>
+                <li><strong>Movimentação de organelas:</strong> A cinesina é responsável pela movimentação de organelas,
+                    como mitocôndrias, no interior das células.</li>
+                <li><strong>Transporte de sinais e moléculas:</strong> Ela também participa no transporte de sinais
+                    celulares essenciais para a função da célula.</li>
             </ul>
         </section>
 
         <section class="section">
             <h2>Exemplo Visual da Cinesina</h2>
-            <p>Este é um exemplo de como a cinesina se movimenta ao longo de um microtúbulo, transportando vesículas e organelas dentro da célula. Esse movimento é fundamental para o bom funcionamento da célula.</p>
-            <img src="../imagem/cinesina_movimento.gif" alt="Representação do movimento da cinesina">
+            <p>Este é um exemplo de como a cinesina se movimenta ao longo de um microtúbulo, transportando vesículas e
+                organelas dentro da célula. Esse movimento é fundamental para o bom funcionamento da célula.</p>
+            <div class="imagem-com-legenda">
+                <img src="../imagem/cinesina_movimento.gif" alt="Representação do movimento da cinesina">
+                <p>Ilustração do movimento da cinesina, uma proteína motora que se desloca ao longo dos microtúbulos do
+                    citoesqueleto. Ela transporta vesículas, organelas e outras cargas dentro da célula, utilizando
+                    energia proveniente da hidrólise de ATP.</p>
+            </div>
         </section>
 
         <footer>
@@ -79,4 +98,5 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
