--- a/html/citoesqueleto.html
+++ b/html/citoesqueleto.html
@@ -8,7 +8,7 @@
     <title>Citoesqueleto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/citoesqueleto.css">
+    <link rel="stylesheet" href="../css/pagina.css">
 </head>
 
 <body>
@@ -47,6 +47,7 @@
     </header>
 
     <div class="container">
+        <div class="content">
             <section class="section">
                 <h2>O que é o Citoesqueleto?</h2>
                 <p>O citoesqueleto é uma rede de fibras que se estende por toda a célula, proporcionando estrutura e
@@ -101,6 +102,7 @@
                     externos e se movimente de maneira eficiente. Sem o citoesqueleto, as células não seriam capazes de
                     realizar funções vitais como a divisão celular ou o transporte de substâncias dentro da célula.</p>
             </section>
+        </div>
     </div>
 
     <footer>
